@@ -113,6 +113,7 @@ New features:
   to specify default values.
 - showTime config option to show high resolution timestamps with
   all messages. Useful for developers only.
+- Skills cast by yourself are now in the 'selfSkill' domain.
 
 New commands:
 - storage log
@@ -257,7 +258,7 @@ Credits:
 - Sinistral: skillsstatus.txt help.
 - Hakore: avoidGM_near_inTown fix.
 - TJ09: Einbroch fields.
-
+- kaliwanagan: 'selfSkill' domain.
 
 ==================
 ### 1.6.1
